[gd_scene load_steps=14 format=3 uid="uid://cj1blsrtyacqf"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_buw6m"]
[ext_resource type="FontFile" uid="uid://cuqko2cx8d1h3" path="res://assets/ui/Chalkboard-Regular.ttf" id="2_pbdlg"]
[ext_resource type="Texture2D" uid="uid://g581u61uhj7x" path="res://assets/graphics/dough or die.png" id="3_b6rti"]
[ext_resource type="FontFile" uid="uid://p2pafja7rn0b" path="res://assets/ui/pixelmix.ttf" id="3_r111f"]
[ext_resource type="AudioStream" uid="uid://cobeba2t1rocf" path="res://assets/audio/sfx/paper1.mp3" id="4_xqg06"]
[ext_resource type="AudioStream" uid="uid://blm27mss88i2h" path="res://assets/audio/Catalogue Orders - Miitopia OST.mp3" id="5_u4say"]

[sub_resource type="Theme" id="Theme_ve67m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1glec"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0xsv"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wap3h"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.223529, 0.223529, 0.223529, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvrie"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.105882, 0.0784314, 0.188235, 0.654902)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7qeq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0.411765, 0.258824)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_b8kcb"]
default_font = ExtResource("2_pbdlg")
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3_r111f")
Button/styles/disabled = SubResource("StyleBoxFlat_1glec")
Button/styles/focus = SubResource("StyleBoxFlat_d0xsv")
Button/styles/hover = SubResource("StyleBoxFlat_wap3h")
Button/styles/normal = SubResource("StyleBoxFlat_uvrie")
Button/styles/pressed = SubResource("StyleBoxFlat_u7qeq")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ve67m")
script = ExtResource("1_buw6m")

[node name="DoughOrDie" type="Sprite2D" parent="."]
position = Vector2(324, 185)
scale = Vector2(0.343543, 0.345371)
texture = ExtResource("3_b6rti")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -126.0
offset_right = 115.0
offset_bottom = -30.0
grow_vertical = 0
pivot_offset = Vector2(67, 9)
theme = SubResource("Theme_b8kcb")

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "start"

[node name="tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "tutorial"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "quit"

[node name="paper1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xqg06")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u4say")
volume_db = -3.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
